--- a/NewProject01.vcxproj
+++ b/NewProject01.vcxproj
@@ -109,6 +109,7 @@
     <ClInclude Include="NewProject01Doc.h" />
     <ClInclude Include="NewProject01View.h" />
     <ClInclude Include="PointFloat.h" />
+    <ClInclude Include="Preview.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -124,6 +125,7 @@
     <ClCompile Include="NewProject01Doc.cpp" />
     <ClCompile Include="NewProject01View.cpp" />
     <ClCompile Include="PointFloat.cpp" />
+    <ClCompile Include="Preview.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
