--- a/NewProject01.vcxproj.filters
+++ b/NewProject01.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="ZoomInfo_Multi.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Preview.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NewProject01.cpp">
@@ -90,6 +93,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="ZoomInfo_Multi.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Preview.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
