--- a/NewProject01.rc
+++ b/NewProject01.rc
@@ -184,12 +184,10 @@ BEGIN
 END
 
 IDD_DIALOG1 DIALOGEX 0, 0, 309, 176
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_CHILD | WS_CAPTION | WS_SYSMENU
 CAPTION "Dialog"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "확인",IDOK,198,155,50,14
-    PUSHBUTTON      "취소",IDCANCEL,252,155,50,14
 END
 
 
