--- a/NewProject01.vcxproj
+++ b/NewProject01.vcxproj
@@ -110,6 +110,7 @@
     <ClInclude Include="NewProject01View.h" />
     <ClInclude Include="PointFloat.h" />
     <ClInclude Include="Preview.h" />
+    <ClInclude Include="PreviewDlg.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -126,6 +127,7 @@
     <ClCompile Include="NewProject01View.cpp" />
     <ClCompile Include="PointFloat.cpp" />
     <ClCompile Include="Preview.cpp" />
+    <ClCompile Include="PreviewDlg.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
