--- a/NewProject01.vcxproj.filters
+++ b/NewProject01.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="Preview.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="PreviewDlg.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NewProject01.cpp">
@@ -96,6 +99,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Preview.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="PreviewDlg.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
