--- a/NewProject01.rc
+++ b/NewProject01.rc
@@ -187,9 +187,9 @@ BEGIN
     CONTROL         "",IDC_MY_PICTURE,"Static",SS_BLACKFRAME,7,354,215,1
 END
 
-IDD_DIALOG1 DIALOGEX 0, 0, 299, 194
+IDD_DIALOG1 DIALOGEX 0, 0, 301, 194
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_CHILD | WS_CAPTION | WS_SYSMENU
-CAPTION "Dialog"
+CAPTION "Preview"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
 END
@@ -261,7 +261,7 @@ BEGIN
     IDD_DIALOG1, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 293
+        RIGHTMARGIN, 294
         TOPMARGIN, 7
         BOTTOMMARGIN, 187
     END
